--- a/10_07_14/.classpath
+++ b/10_07_14/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/Fabio/Desktop/MaterialeXStudentiJava/SOFTWARE/librerieJava/javax.servlet.jsp_2.0.0.v200706191603.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fabio/Desktop/MaterialeXStudentiJava/SOFTWARE/librerieJava/javax.servlet_2.4.0.v200706111738.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
